--- a/Admin/Views/Series/CreateOrUpdate.cshtml
+++ b/Admin/Views/Series/CreateOrUpdate.cshtml
@@ -1,46 +1,44 @@
-﻿
-
-<style>
-    .list-group {
-        min-height: 100px;
-        border: 1px solid #ccc;
-        padding: 10px;
-        list-style-type: none;
-    }
-
-    .list-group-item {
-        margin: 5px 0;
-        padding: 10px;
-        border: 1px solid #ccc;
-        cursor: move;
-    }
-
-    .list-item-raw {
-        margin: 5px 0;
-        padding: 10px;
-        border: 1px solid #ccc;
-        cursor: move;
-    }
-
-    .search-box {
-        margin-bottom: 20px;
-    }
-</style>
-
-<div class="row">
-    <div class="col-6 p-5">
-        <h3>Danh sách truyện</h3>
-        <input type="text" id="searchInput" class="form-control mb-3" placeholder="Tìm kiếm truyện...">
-        <ul id="storiesList" class="list-group">
-            <!-- Danh sách tất cả các truyện, không bao gồm truyện có trong series bên phải -->
-        </ul>
+﻿<div class="page-breadcrumb d-none d-sm-flex align-items-center mb-3">
+    <div class="breadcrumb-title pe-3">Series</div>
+    <div class="ps-3">
+        <nav aria-label="breadcrumb">
+            <ol class="breadcrumb mb-0 p-0">
+                <li class="breadcrumb-item">
+                    <a href="/"><i class="bx bx-home-alt"></i></a>
+                </li>
+                <li class="breadcrumb-item active" aria-current="page">Danh sách series</li>
+            </ol>
+        </nav>
     </div>
-
-    <div class="col-6 p-5">
-        <h3>Series</h3>
-        <a href="#" class="btn btn-primary mb-3">Update</a>
-        <ul id="seriesList" class="list-group">
-            <!-- Truyện kéo thả sẽ xuất hiện ở đây -->
-        </ul>
+    <div class="ms-auto">
+        <div class="btn-group">
+            <button type="button" class="btn btn-primary" id="btnAdd">Thêm Series</button>
+        </div>
+    </div>
+</div>
+<div class="row" id="seriesContainer">
+    <div class="col-6">
+        <input type="text" class="form-control" name="name" value="" />
+        <div class="w-100" id="storySearchResult"></div>
+    </div>
+    <div class="col-2">
+        <select class="form-select">
+            <option value="last">Cuối</option>
+        </select>
+    </div>
+    <div class="col-1">
+        <input type="button" class="btn btn-danger" id="btnDelSeries" name="name" value="Xóa" />
+    </div>
+    <div class="col-12">
+        <table class="table table-bordered">
+            <thead>
+                <tr>
+                    <th class="w-25">Số thứ tự</th>
+                    <th class="w-75">Truyện</th>
+                </tr>
+            </thead>
+            <tbody id="seriesTableBody">
+            </tbody>
+        </table>
     </div>
 </div>
