--- a/Admin/Views/Series/Index.cshtml
+++ b/Admin/Views/Series/Index.cshtml
@@ -41,4 +41,42 @@
         </div>
     </div>
 </div>
+<div class="modal fade" id="seriesModal" tabindex="-1">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <form id="seriesForm">
+                <div class="modal-header">
+                    <h5 class="modal-title">Thêm / Sửa Series</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                </div>
+                <div class="modal-body">
+                    <input type="hidden" id="SeriesId" name="Id" />
+
+                    <div class="mb-3">
+                        <label for="SeriName" class="form-label">Tên Series</label>
+                        <input type="text" class="form-control" id="SeriName" name="SeriName" required />
+                    </div>
+
+                    <div class="mb-3">
+                        <label class="form-label">Danh sách truyện trong Series</label>
+                        <table class="table table-sm align-middle" id="tblStories">
+                            <thead>
+                                <tr>
+                                    <th style="width: 90%">Truyện</th>
+                                    <th style="width: 10%">Thứ tự</th>
+                                </tr>
+                            </thead>
+                            <tbody></tbody>
+                        </table>
+                        <button type="button" class="btn btn-outline-primary btn-sm" id="btnAddStoryRow">+ Thêm truyện</button>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" id="btnSubmit" class="btn btn-success">Lưu</button>
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Đóng</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
 
