--- a/Admin/Views/Story/Index.cshtml
+++ b/Admin/Views/Story/Index.cshtml
@@ -95,6 +95,10 @@
                         <textarea rows="6" class="form-control" name="NumberChapter" id="txtNumberChapter"></textarea>
                     </div>
                     <div class="form-group mb-3">
+                        <label class="form-label">Tag</label>
+                        <textarea rows="3" class="form-control" name="tagName" id="txtTagName"></textarea>
+                    </div>
+                    <div class="form-group mb-3">
                         <label class="form-label">Nguồn</label>
                         <select class="form-select" id="sources" name="sources">
                             <option value="SacHiepVien">SacHiepVien</option>
